RESOLVED FIXED 270829
IdentityCredentialsContainer should not be forwarding options
https://bugs.webkit.org/show_bug.cgi?id=270829
Summary IdentityCredentialsContainer should not be forwarding options
Marcos Caceres
Reported 2024-03-11 18:06:56 PDT
IdentityCredentialsContainer is std::forward<>'ing options, when it doesn't need to be.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-03-11 18:07:57 PDT
Marcos Caceres
Comment 2 2024-03-11 18:09:09 PDT
EWS
Comment 3 2024-03-19 06:12:50 PDT
Committed 276342@main (3190d0ab267d): <https://commits.webkit.org/276342@main> Reviewed commits have been landed. Closing PR #25752 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.