IdentityCredentialsContainer should not be forwarding options https://bugs.webkit.org/show_bug.cgi?id=270829 rdar://124419446

Reviewed by Abrar Rahman Protyasha.

Removed unnecessary forwarding of options to the underlying CredentialManager.

* Source/WebCore/Modules/identity/IdentityCredentialsContainer.cpp:
(WebCore::IdentityCredentialsContainer::get):
(WebCore::IdentityCredentialsContainer::isCreate):

Canonical link: https://commits.webkit.org/276342@main